--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
+server.port=8080
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.database=0
+spring.redis.username=
+spring.redis.password=
 api.key=
 api.secret=
