VTTP Mini Project

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.redis.username=
 spring.redis.password=
 api.key=
 api.secret=
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
